Fix full width template + stretch footer

--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -78,6 +78,17 @@
     }
 }
 
+
+.content-area-full-width {
+    margin: 0;
+    
+    .site-main {
+        margin: 0;
+    }
+    
+    width: 100%;
+}
+
 // Archives header block TODO: google calendar style custom img, per month
 .page-header {
     background-color: $color__complementary;
@@ -100,13 +111,14 @@
 }
 
 .site-footer {
+    width: $size__site-main;
     max-width: $size__maxwidth;
 
     color: white;
     
     margin: 0 auto 0 auto;
     font-size: 0.95em;
-    padding: 50px 10px;
+    padding: 50px 0;
     
     position: relative;
 
@@ -120,9 +132,9 @@
     }
     
     & .widget {
-        background-color: rgba(255,255,255,0.07);
+        background-color: rgba(234, 234, 234, 0.11);
         border: 1px solid rgba(0, 0, 0, 0.46);
-        margin: 10px;
+        margin: 0 10px 10px 0;
     }
     
     & .site-info {
