--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -17,9 +17,9 @@
     -ms-word-wrap: break-word;
     word-wrap: break-word;
     
-    -webkit-box-shadow: 2px 2px 16px 0px rgba(0,0,0,0.4);
-    -moz-box-shadow: 2px 2px 16px 0px rgba(0,0,0,0.4);
-    box-shadow: 2px 2px 16px 0px rgba(0,0,0,0.4);
+    -webkit-box-shadow: 2px 2px 16px 0px rgba(0,0,0,0.35);
+    -moz-box-shadow: 2px 2px 16px 0px rgba(0,0,0,0.35);
+    box-shadow: 2px 2px 16px 0px rgba(0,0,0,0.35);
     
     border-radius: 2px;
 }
